# inpe-queimadas-etl

./: .env.example  .env.local.example  .gitattributes  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  render.yaml
.github/workflows/: daily.yml
_quarantine/sqlm_marts_aux/: 031_uf_poly_day_full.sql  032_uf_poly_day_viz.sql  034_geo_focos_diario_municipio.sql  045_mun_poly_day_viz.sql
api/: .env.example  requirements.txt
api/app/: cache.py  db.py  geo.py  main.py  schemas.py
archive/: README.md
dash/superset/: docker-compose.yml  superset_config.py
devtools/: run_sql.sh  win_fix_index.ps1  win_git_diag.ps1  win_git_diag.sh  win_git_index_recover.ps1  win_git_repair.sh
devtools/legacy/: checks.sh  ensure_ref_ibge.sh  rebuild_marts.sh  report_day.sh  reprocess_day.sh  run_all.sh  run_enrich.sh  run_marts.sh  run_ref.sh  run_today.sh
docs/: auditoria_superset.md  deps_legacy_before_drop.md  geo_sources_report.md  hygiene_plan.md  inventory_superset_sql.md  legacy_objects.md  removal_candidate_list.md  repo_hygiene_v1.md  runbook.md  scatter.md  superset_setup.md  validation_last_run.md
docs/archive/: performance.md  removal_candidate_list.md
docs/migrations/: sqlm_manifest.yml
docs/sql/: geo_sources_apply.sql  (+2 more)
notebooks/: annual_analytics_2025_2026.ipynb
scripts/: _uv.sh  checks.sh  ensure_ref_ibge.sh  rebuild_marts.sh  report_day.sh  reprocess_day.sh  run.sh  run_all.sh  run_daily.ps1  run_enrich.sh  run_marts.sh  run_range.ps1  run_ref.sh  run_sql.sh  run_today.sh  smoke.ps1
web/: index.html  package-lock.json  package.json
(+80 files in other folders)
