[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inpe-queimadas-etl"
version = "0.1.0"
description = "Geospatial ETL for INPE queimadas CSV into PostGIS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.3",
    "psycopg[binary]>=3.3.2",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
